force-app/main/default/objects/Shipping_Estimate__c/Shipping_Estimate__c.object-meta.xml
<CustomObject>
    <label>Shipping Estimate</label>
    <nameField>
        <displayFormat>ShipEst-{0}</displayFormat>
        <label>Shipping Estimate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>