force-app/main/default/objects/Shipping_Estimate__c/fields/Default_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Default_Estimate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to determine if this estimate was autogenerated by the system.</description>
    <label>Default Estimate</label>
    <type>Checkbox</type>
</CustomField>