force-app/main/default/objects/Shipping_Estimate__c/fields/Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notes__c</fullName>
    <label>Shipping Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>