force-app/main/default/objects/Shipping_Estimate__c/fields/Shipping_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Summary__c</fullName>
    <label>Shipping Summary</label>
    <referenceTo>Shipping_Estimate_Summary__c</referenceTo>
    <relationshipLabel>Shipping Estimates</relationshipLabel>
    <relationshipName>Shipping_Estimates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>