force-app/main/default/objects/Shipping_Estimate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estimated_Shipping_Date__c</columns>
    <columns>Estimated_Shipping_Quantity__c</columns>
    <columns>Quote_Line__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>